// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`MultiSelect Component renders all items 1`] = `
"❯ ◯ Option A
  ◯ Option B
  ◯ Option C
\x1B[?25l"
`;

exports[`MultiSelect Component renders with default selected items 1`] = `
"❯ ◉ Option A
  ◯ Option B
  ◯ Option C
\x1B[?25l"
`;

exports[`MultiSelect Component renders with limit 1`] = `
"❯ ◯ Item 1
  ◯ Item 2
  ◯ Item 3
\x1B[?25l"
`;

exports[`MultiSelect Component renders empty list 1`] = `"\x1B[?25l"`;
